# 2drp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint  todo.md  vcpkg-configuration.json  vcpkg.json
dependencies/: git.txt
dependencies/_config/ogg/include/: config_types.h
dependencies/ziplib/Source/ZipLib/: ZipArchiveEntry.cpp  ZipArchiveEntry.h  ZipFile.cpp
doc/: engine_loop.txt  licenses.txt  scene_objects.txt  settings.ini
src/client/: BabyDI.Configuration.h  CMakeLists.txt  main.cpp
src/client/component/render/: AnimationRenderComponent.cpp  AnimationRenderComponent.h  Renderable.h  StaticRenderComponent.cpp  StaticRenderComponent.h  TMXRenderComponent.cpp  TMXRenderComponent.h  TextRenderComponent.cpp  TextRenderComponent.h  TileMapRenderComponent.cpp  TileMapRenderComponent.h
src/client/component/render/animation/: GaniAnimation.cpp  GaniAnimation.h  IAnimationSystem.h  SpriterAnimation.cpp  SpriterAnimation.h
src/client/component/render/helper/: SceneObject.h
src/client/game/: Camera.cpp  Camera.h  Game.cpp  Game.h
src/client/loader/: ResourceLoaders.h  SFMListream.h
src/client/loader/gani/: GaniLoader.cpp  GaniLoader.h
src/client/loader/spriter/: filefactory.cpp  filefactory.h  jsonspriterfileattributewrapper.cpp  jsonspriterfileattributewrapper.h  jsonspriterfiledocumentwrapper.cpp  jsonspriterfiledocumentwrapper.h  jsonspriterfileelementwrapper.cpp  jsonspriterfileelementwrapper.h  objectfactory.cpp  objectfactory.h  pugixmlspriterfileattributewrapper.cpp  pugixmlspriterfileattributewrapper.h  pugixmlspriterfiledocumentwrapper.cpp  pugixmlspriterfiledocumentwrapper.h  pugixmlspriterfileelementwrapper.cpp  pugixmlspriterfileelementwrapper.h  sfmlatlasfile.cpp  sfmlatlasfile.h  sfmlboneinstanceinfo.cpp  sfmlboneinstanceinfo.h  sfmlboxinstanceinfo.cpp  sfmlboxinstanceinfo.h  sfmlimagefile.cpp  sfmlimagefile.h  sfmlpointinstanceinfo.cpp  sfmlpointinstanceinfo.h  sfmlsoundfile.cpp  sfmlsoundfile.h  sfmlsoundobjectinforeference.cpp  sfmlsoundobjectinforeference.h
src/client/loader/ui/: UILoader.cpp  UILoader.h
src/client/network/: DownloadManager.cpp  DownloadManager.h  PacketHandler.cpp  PacketHandler.h  ServerPacketHandler.cpp  ServerPacketHandler.h
src/client/render/: PixelFormat.h  Render.cpp  Render.h  Window.cpp  Window.h
src/client/render/component/: AnimationRenderComponent.cpp  AnimationRenderComponent.h  RenderComponent.cpp  RenderComponent.h  Renderable.h  SpriterRenderComponent.cpp  SpriterRenderComponent.h  TMXRenderComponent.cpp  TMXRenderComponent.h  TextRenderComponent.cpp  TextRenderComponent.h  TileMapRenderComponent.cpp  TileMapRenderComponent.h  TiledRenderComponent.cpp  TiledRenderComponent.h
src/client/render/component/Animation/: GaniAnimation.cpp  GaniAnimation.h  IAnimationSystem.h  SpriterAnimation.cpp  SpriterAnimation.h
src/client/render/component/helper/: SceneObject.h
src/client/render/resource/: SFMListream.h
src/client/render/resources/: Image.cpp  Image.h  Texture.h
src/client/script/: Script.cpp  Script.h
src/client/ui/: UIManager.cpp  UIManager.h
src/client/ui/interface/: RenderInterfaceSFML.cpp  RenderInterfaceSFML.h  RmlUi_Backend.h  RmlUi_Backend_SFML_GL2.cpp  RmlUi_Platform_SFML.cpp  RmlUi_Platform_SFML.h  RmlUi_Renderer_GL2.cpp  RmlUi_Renderer_GL2.h  ShellFileInterface.cpp  ShellFileInterface.h  SystemInterfaceSFML.cpp  SystemInterfaceSFML.h
src/client/ui/interface/win32/: IncludeWindows.h
src/client/useable/: Useable.h
src/engine/: CMakeLists.txt  Enum.h  common.h
src/engine/component/: Component.h
src/engine/events/: Events.cpp  Events.h
src/engine/filesystem/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  ProgramSettings.cpp  ProgramSettings.h  common.h
src/engine/filesystem/watch/: FileWatch.h  FileWatchOS_Linux.cpp  FileWatchOS_OSX.cpp  FileWatchOS_Windows.cpp
src/engine/helper/: base64.h  flags.h  math.h
src/engine/item/: Item.h
src/engine/loader/: LevelLoader.cpp  LevelLoader.h  Loader.h  PackageLoader.cpp  PackageLoader.h
src/engine/network/: ClientPacketHandler.cpp  ClientPacketHandler.h  DownloadManager.cpp  DownloadManager.h  Network.cpp  Network.h  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  PacketID.h  PacketsClient.h  PacketsInc.h  PacketsServer.h
src/engine/network/construct/: Attributes.h  Class.h  SceneObject.h  Tileset.h
src/engine/network/packets/: CLogin.pb.cc  CLogin.pb.h  CObjectAttributes.pb.cc  CObjectAttributes.pb.h  CRequestFile.pb.cc  CRequestFile.pb.h  CSceneObjectChange.pb.cc  CSceneObjectChange.pb.h  CSceneObjectUnfollow.pb.cc  CSceneObjectUnfollow.pb.h  CSendEvent.pb.cc  CSendEvent.pb.h  SClass.pb.cc  SClass.pb.h  SClassDelete.pb.cc  SClassDelete.pb.h  SClientScript.pb.cc  SClientScript.pb.h  SClientScriptDelete.pb.cc  SClientScriptDelete.pb.h  SError.pb.cc  SError.pb.h  SLoginStatus.pb.cc  SLoginStatus.pb.h  SPackageFiles.pb.cc  SPackageFiles.pb.h  SSceneObject.pb.cc  SSceneObject.pb.h  SSceneObjectChange.pb.cc  SSceneObjectChange.pb.h  SSceneObjectControl.pb.cc  SSceneObjectControl.pb.h  SSceneObjectDelete.pb.cc  SSceneObjectDelete.pb.h  SSceneObjectNew.pb.cc  SSceneObjectNew.pb.h  SSendEvent.pb.cc  SSendEvent.pb.h  SServerInfo.pb.cc  SServerInfo.pb.h  (+4 more)
src/engine/network/proto/: CLogin.proto  CRequestFile.proto  CSceneObjectChange.proto  CSceneObjectUnfollow.proto  CSendEvent.proto  ClassAdd.proto  ClassDelete.proto  ClientControlScript.proto  ClientScriptAdd.proto  ClientScriptDelete.proto  Error.proto  FileRequest.proto  (+41 more)
src/engine/os/: Utils.h  Windows.cpp
src/engine/package/: Package.cpp  Package.h
src/engine/physics/: Physics.cpp  Physics.h
src/engine/resources/: IdGenerator.h  Resource.h  ResourcePool.h  ResourcePool.hpp
src/engine/scene/: ObjectAttributes.cpp  ObjectAttributes.h  ObjectClass.h  ObjectProperties.cpp  ObjectProperties.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Tileset.h
src/engine/script/: Function.h  Script.cpp  Script.h
src/engine/server/: Account.cpp  Account.h  Player.cpp  Player.h  Server.cpp  Server.h
(+14 files in other folders)
